syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.panda.authenService.proto";

package auth;

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string message = 2;
  UserInfo user_info = 3;
}

message UserInfo {
  string user_id = 1;
  string username = 2;
  repeated string roles = 3;
} 